# grab-bazel-common

./: .bazelrc  BUILD.bazel  CODEOWNERS  README.md  WORKSPACE  bazel_common_maven_install.json  workspace_defs.bzl
.github/actions/bazel/: action.yml
.github/workflows/: ci.yml
project_views/: default.bazelproject
rules/: defs.bzl  maven.bzl  repositories.bzl  setup.bzl
rules/android/: BUILD.bazel  android_binary.bzl  android_instrumentation.bzl  android_library.bzl  lint.bzl  test.bzl  utils.bzl
rules/android/compose/: BUILD.bazel
rules/android/lint/: BUILD.bazel  collect_aar_aspect.bzl  defs.bzl  lint.bzl  lint_aspect.bzl  lint_inspect.bzl  lint_sources.bzl  lint_test.bzl  lint_update_baseline.bzl  providers.bzl  utils.bzl
rules/android/private/: resource_merger.bzl  test_manifest.bzl
rules/check/detekt/: defs.bzl
rules/kotlin/: kotlin.bzl  test.bzl
rules/test/: multi_test.bzl  test.bzl
tests/android/: BUILD.bazel  lint_baseline.xml
tests/android/binary/: BUILD.bazel  lint_baseline.xml
tests/android/binary/src/main/: AndroidManifest.xml
tests/android/binary/src/main/res/layout/: layout_test.xml
tests/android/binary/src/main/res/values-id/: strings.xml
tests/android/custom-lint-rules/: BUILD.bazel
tests/android/custom-lint-rules/src/main/java/com/bazel/common/lint/rules/: LintIssueRegistry.kt  TimberTest.kt
tests/android/src/main/java/com/grab/test/: TestActivity.kt
tests/android/src/main/res/layout/: layout_test.xml
tests/kotlin/: BUILD.bazel
tools/aapt_lite/: BUILD
tools/aapt_lite/src/main/java/com/grab/aapt/: AaptLiteCommand.kt  BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/: BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/model/: BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/brclass/: BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/common/: BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/di/: BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/mapper/: BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/rclass/: BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/util/: BUILD.bazel
tools/aapt_lite/src/main/java/com/grab/aapt/databinding/util/jars/: BUILD.bazel
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/binding/: DefaultLayoutBindingsParserTest.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/binding/generator/: DefaultBindingClassGeneratorTest.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/binding/store/: CachingBindingClassJsonParserTest.kt  DependenciesLayoutTypeStoreTest.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/brclass/: DefaultBrClassGeneratorTest.kt
tools/aapt_lite/src/test/java/com/grab/aapt/databinding/rclass/parser/: DefaultRTxtParserTest.kt  ResToRDepsParserTest.kt  ResToRFileIDParserTest.kt  ResToRStyleableValueParserTest.kt  ResToRValueParserTest.kt
tools/android_mock/: BUILD.bazel  andorid_mock.bzl
tools/android_mock/src/main/java/com/grab/test/: main.kt
tools/bazel_lib/: BUILD.bazel
tools/binding-adapter-bridge/: BUILD.bazel
tools/build_config/: BUILD
tools/build_config/src/main/java/com/grab/buildconfig/: BUILD.bazel
tools/buildifier/: defs.bzl
tools/cli_utils/: BUILD.bazel
tools/cli_utils/src/main/java/com/grab/cli/: WorkingDirectory.kt
tools/custom_res/: custom_res.bzl
tools/databinding/: databinding.bzl
tools/kotlin/: android.bzl
tools/lint/: BUILD.bazel
tools/lint/src/main/java/com/grab/lint/: BUILD.bazel  Dependency.kt  Document.kt  Env.kt  File.kt  LintAnalyzeCommand.kt  LintBaseCommand.kt  LintBaseline.kt  LintBaselineHandler.kt  LintCommand.kt  LintDependency.kt  LintModelCreator.kt  LintReportCommand.kt  LintResults.kt  Main.kt  ProjectXmlCreator.kt  Sanitizer.kt
tools/lint/src/main/java/com/grab/lint/inspector/: ArgumentParser.kt  BUILD.bazel  Inspector.kt  LintIssueModel.kt  Main.kt
tools/lint/src/test/java/com/grab/lint/: LintAnalyzeCommandTest.kt  LintBaselineHandlerTest.kt  LintBaselineSanitizerTest.kt  LintBaselineTest.kt  LintModelCreatorTest.kt  LintResultsTest.kt
tools/maven/: BUILD.bazel
tools/maven/src/main/kotlin/com/grab/maven/: MavenInstallPin.kt  WorkspaceUpdater.kt
tools/parcelize/: parcelize.bzl
tools/test_suite/: BUILD.bazel
tools/test_suite/src/main/java/com/grab/test/: AllTests.kt
tools/test_suite_generator/: BUILD.bazel  README.md
tools/test_utils/: BUILD.bazel
tools/test_utils/src/main/java/com/grab/test/: BaseTest.kt
tools/worker/: BUILD.bazel
tools/worker/src/main/kotlin/io/bazel/: Worker.kt
tools/worker/src/main/kotlin/io/bazel/streams/: Streams.kt  WorkerStreams.kt
tools/worker/test_worker/: BUILD.bazel
