load("@grab_bazel_common//rules:defs.bzl", "kotlin_library", "kotlin_test")

kotlin_library(
    name = "kotlin_test_lib",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
)

kotlin_test(
    name = "kotlin_test",
    srcs = glob([
        "src/test/java/**/*.kt",
    ]),
    associates = [
        ":kotlin_test_lib",
    ],
    deps = [
        "@maven//:junit_junit",
    ],
)
