load("@grab_bazel_common//rules:defs.bzl", "kotlin_library")

kotlin_library(
    name = "mocked_android_jar_lib",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    visibility = [
        "//visibility:private",
    ],
    deps = [
        "@bazel_common_maven//:com_github_ajalt_clikt",
        "@bazel_common_maven//:org_ow2_asm_asm",
        "@bazel_common_maven//:org_ow2_asm_asm_tree",
    ],
)

java_binary(
    name = "mocked_android_jar_generator",
    main_class = "com.grab.test.MainKt",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        ":mocked_android_jar_lib",
    ],
)
