load("@grab_bazel_common//rules:defs.bzl", "kotlin_test")

kotlin_test(
    name = "lint_cli_test",
    srcs = glob([
        "src/test/java/**/*.kt",
    ]),
    deps = [
        "//tools/lint/src/main/java/com/grab/lint",
        "//tools/test_utils",
        "@bazel_common_maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
    ],
)

java_binary(
    name = "lint_cli",
    main_class = "com.grab.lint.MainKt",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        "//tools/lint/src/main/java/com/grab/lint",
    ],
)

java_binary(
    name = "lint_inspector",
    #    jvm_flags = ["-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005"],
    main_class = "com.grab.lint.inspector.MainKt",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        "//tools/lint/src/main/java/com/grab/lint/inspector:lint-inspector-lib",
    ],
    #
)
