load("@grab_bazel_common//rules:defs.bzl", "kotlin_library")

kotlin_library(
    name = "test_suite",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@bazel_common_maven//:com_google_guava_guava",
        "@bazel_common_maven//:junit_junit",
    ],
)
