load("@grab_bazel_common//rules:defs.bzl", "kotlin_library")

kotlin_library(
    name = "test_utils",
    srcs = glob([
        "src/main/java/**/*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@bazel_common_maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
    ],
)
