load("@grab_bazel_common//rules:defs.bzl", "kotlin_library")

kotlin_library(
    name = "lint",
    srcs = glob([
        "*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "//tools/cli_utils",
        "//tools/worker:worker_lib",
        "@bazel_common_maven//:com_android_tools_lint_lint",
        "@bazel_common_maven//:com_android_tools_lint_lint_api",
        "@bazel_common_maven//:com_android_tools_lint_lint_checks",
        "@bazel_common_maven//:com_github_ajalt_clikt",
        "@bazel_common_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)
