load("@grab_bazel_common//rules:defs.bzl", "kotlin_library")

kotlin_library(
    name = "lint-inspector-lib",
    srcs = glob([
        "*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@bazel_common_maven//:com_android_tools_lint_lint_api",
        "@bazel_common_maven//:com_android_tools_lint_lint_checks",
        "@bazel_common_maven//:com_github_ajalt_clikt",
        "@bazel_common_maven//:com_squareup_moshi_moshi_kotlin",
        "@bazel_common_maven//:net_sf_kxml_kxml2",
        "@bazel_common_maven//:xmlpull_xmlpull",
    ],
)
