load("@grab_bazel_common//rules:defs.bzl", "kotlin_library")

kotlin_library(
    name = "mapper",
    srcs = glob([
        "*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/di:aapt_scope",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/util/jars",
        "@bazel_common_maven//:com_github_ajalt_clikt",
        "@bazel_common_maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
)
