load("@grab_bazel_common//rules:defs.bzl", "kotlin_library")

kotlin_library(
    name = "rclass",
    srcs = glob([
        "**/*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/binding/model",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/common",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/di:aapt_scope",
        "@bazel_common_maven//:com_squareup_javapoet",
    ],
)
