load("@grab_bazel_common//rules:defs.bzl", "kotlin_library")

kotlin_library(
    name = "model",
    srcs = glob([
        "Models.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/util",
        "@bazel_common_maven//:com_squareup_javapoet",
    ],
)
