load("@grab_bazel_common//rules:defs.bzl", "kotlin_library")

kotlin_library(
    name = "jars",
    srcs = glob([
        "*.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:dagger",
        "//tools/aapt_lite/src/main/java/com/grab/aapt/databinding/di:aapt_scope",
    ],
)
